--- a/api/package.json
+++ b/api/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "async": "^1.4.2",
-    "aws-sdk": "^2.2.6"
+    "aws-sdk": "^2.2.6",
+    "lodash": "^3.10.1",
+    "node-uuid": "^1.4.3"
   }
 }
